hello-world-service/managed-certificate-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: gke-test-cluster
  name: hello-world
spec:
  selector:
    matchLabels:
      run: gke-test-cluster
  replicas: 1
  template:
    metadata:
      labels:
        run: gke-test-cluster
    spec:
      containers:
      - name: hello-world
        image: nginx:1.15.8
        ports:
        - containerPort: 80
          protocol: TCP
