hello-world-service/managed-certificate-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: gke-test-cluster
  name: hello-world-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: gke-test-cluster
  type: NodePort
