hello-world-service/managed-certificate-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gke-test-cluster-ingress
  annotations:
    # kubernetes.io/ingress.global-static-ip-name: gke-test-cluster-static-ip
    networking.gke.io/managed-certificates: gke-test-cluster-certificate
spec:
  backend:
    serviceName: hello-world-service
    servicePort: 80
